--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:4.3'
     compile 'org.slf4j:slf4j-android:1.7.12'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.6'
 }
