--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        maven { url "https://jitpack.io" }
     }
 }
